[gd_scene load_steps=2 format=3 uid="uid://c82pwekjvftdi"]

[ext_resource type="Script" path="res://src/Extensions/Audia/Elements/MusicListContainer.gd" id="1"]

[node name="Window" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(435, 385)
visible = false
exclusive = true

[node name="MusicListContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="MusicListContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MusicListContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Audio Driver:"

[node name="OptionButton" type="OptionButton" parent="MusicListContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="RichTextLabel" parent="MusicListContainer/VBoxContainer"]
self_modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
text = "Accepts: mp3, ogg, wav
Usage: drag and drop. Set identifier to any tag's name."
fit_content = true
scroll_active = false

[node name="Label3" type="Label" parent="MusicListContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Music Library:"

[node name="ScrollContainer" type="ScrollContainer" parent="MusicListContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="MusicListContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="Load" type="Button" parent="MusicListContainer/VBoxContainer"]
layout_mode = 2
text = "Open Audios"

[node name="Popups" type="Control" parent="MusicListContainer"]
layout_mode = 2
mouse_filter = 2

[node name="FileDialog" type="FileDialog" parent="MusicListContainer/Popups"]
mode = 1
title = "Open File(s)"
size = Vector2i(651, 414)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.mp3", "*.ogg", "*.wav")

[node name="Audios" type="Node" parent="MusicListContainer"]

[connection signal="close_requested" from="." to="MusicListContainer" method="_on_window_close_requested"]
[connection signal="item_selected" from="MusicListContainer/VBoxContainer/OptionButton" to="MusicListContainer" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MusicListContainer/VBoxContainer/Load" to="MusicListContainer" method="_on_Load_pressed"]
[connection signal="files_selected" from="MusicListContainer/Popups/FileDialog" to="MusicListContainer" method="add_audios"]
